Implement Endpoint for Searchable autocomplete endpoint
